# CPPND-CAPSTONE-TIMESERIES

./: CMakeLists.txt  CMakeLists3.txt  Readme_timeseries.md
include/: analysis.h  stock.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: analysis.cpp  main.cpp  stock.cpp
